Fix P1 issues with the blocked redirect UI for desktop platforms

- The omnibox icon size was changed
- The strings used in the dialog were changed

TBR=estade@chromium.org

Bug: 797112
Change-Id: I05d70320f41940899663d871a6dc1948ee6fd0d2
Reviewed-on: https://chromium-review.googlesource.com/841245
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Reviewed-by: Patrick Monette <pmonette@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527102}
Former-commit-id: eb2d85a1781ccb06bdf0b28b0372586847bd4131